# fingerprint-dmd

./: .gitignore  DMD++.yaml  DMD.yaml  README.md  dump_dataset_mnteval.py  evaluate_mnt.py  test_dmd.sh
datasets/: convert_img.py  convert_mnt.py  generate_pairs.py  steps.md  steps.txt
dmd/: __init__.py  demo.ipynb  dmd_api.py  dmd_utils.py  identification_with_background.ipynb  pyproject.toml
dmd/examples/: detailed_errors.ipynb  identification.ipynb
dmd/examples/identification/: identification.ipynb
grids/: dmd.ipynb  dmd_api.py  dmd_model.py  dmd_utils.py
